--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>AI Christmas tree</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
-    <link rel="icon" type="image/png" href="star.png?v=1">
+    <link rel="icon" type="image/png" href="star.png?">
 </head>
 <body>
 
